5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1613_2043.log
== SUBMITION (2019-03-31 16:38:03) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1+nota2+nota3+nota4)
minima=min(nota1+nota2+nota3+nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.178446
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2043/main.py", line 5, in <module>
    maxima=max(nota1+nota2+nota3+nota4)
TypeError: 'float' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:38:15) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1+nota2+nota3+nota4)
minima=min(nota1+nota2+nota3+nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    maxima=max(nota1+nota2+nota3+nota4)
TypeError: 'float' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:39:07) 
-- CODE:
nota1=int(input("digite o numero"))
nota2=int(input("digite o numero"))
nota3=int(input("digite o numero"))
nota4=int(input("digite o numero"))
maxima=max(nota1+nota2+nota3+nota4)
minima=min(nota1+nota2+nota3+nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.129095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2043/main.py", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:39:16) 
-- CODE:
nota1=int(input("digite o numero"))
nota2=int(input("digite o numero"))
nota3=int(input("digite o numero"))
nota4=int(input("digite o numero"))
maxima=max(nota1+nota2+nota3+nota4)
minima=min(nota1+nota2+nota3+nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:40:46) 
-- CODE:
nota1=int(input("digite o numero"))
nota2=int(input("digite o numero"))
nota3=int(input("digite o numero"))
nota4=int(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.292987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2043/main.py", line 2, in <module>
    nota2=int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:41:21) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.203401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2043/main.py", line 7, in <module>
    madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
NameError: name 'maximo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:41:31) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
print(madiaponderada,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    madiaponderada=(nota1+nota2+nota3+nota4)-(maximo+minima)
NameError: name 'maximo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:42:10) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.140638
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
16.5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
14.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
14.850000000000003 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:42:30) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.113009
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
16.5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
14.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
14.850000000000003 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 16:42:35) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- OUTPUT:
16.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 16:44:39) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.214063
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
16.5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
14.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
14.850000000000003 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 08:58:02) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.217802
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
16.5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
14.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
14.850000000000003 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 08:58:05) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- OUTPUT:
16.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 08:59:58) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.159098
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
16.5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
14.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
14.850000000000003 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:18:38) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(madiaponderada,2)
-- EXECUTION TIME:
0.180017
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
16.5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
14.0 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
14.850000000000003 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:18:58) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(round(madiaponderada,2)
-- EXECUTION TIME:
0.160408
-- ERROR:
  File "/home/codebench/codes/1613/2043/main.py", line 9
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:19:05) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(round(madiaponderada,2)
-- EXECUTION TIME:
0.1306
-- ERROR:
  File "/home/codebench/codes/1613/2043/main.py", line 9
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:19:08) 
-- CODE:
nota1=float(input("digite o numero"))
nota2=float(input("digite o numero"))
nota3=float(input("digite o numero"))
nota4=float(input("digite o numero"))
maxima=max(nota1,nota2,nota3,nota4)
minima=min(nota1,nota2,nota3,nota4)
madiaponderada=(nota1+nota2+nota3+nota4)-(maxima+minima)
print(round(madiaponderada,2)
-- ERROR:
File "XXXX", line 9
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
